# swirly-swirls

./: .gitignore  README.md  demos.bat  pyproject.toml
src/swirlyswirls/: __init__.py  compsys.py  demo.py  emitter.py  particles.py  spritegroup.py  utils.py  zones.py
src/swirlyswirls/demos/: beam.py  bullet.py  drops.py  explosions.py  point.py  pond.py  rain.py  rsai.py
