[project]
name = "swirlyswirls"
description = "Swirly swirling particles"
version = "0.0.2"
readme = "README.md"

authors = [
    { name="Michael Lamertz", email="michael.lamertz@gmail.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: pygame",
]

dependencies = [
    "pygame-ce",
    "cooldown @ git+https://github.com/dickerdackel/cooldown",
    "pygamehelpers @ git+https://github.com/dickerdackel/pygamehelpers",
    "tinyecs @ git+https://github.com/dickerdackel/tinyecs",
]

[project.scripts]
swirly-demo = "swirlyswirls.demo:main"

[project-urls]
homepage = "https://github.com/dickerdackel/swirly-swirls"
bugtracker = "https://github.com/DickerDackel/swirly-swirls/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-rA -s --cov-report term-missing -s"
testpaths = [
    "tests",
]
